[package]
name = "ss-uri"
license="Apache-2.0"
description = "shadowsocks uri parser inspired by https://github.com/Jigsaw-Code/outline-shadowsocksconfig"
homepage = "https://github.com/ehsan2003/ss-uri"
version = "0.2.0"
edition = "2021"
readme="README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url="2.2.2"
base64="0.13.0"
percent-encoding ="2.1.0"