[package]
description = "shadowsocks uri parser inspired by https://github.com/Jigsaw-Code/outline-shadowsocksconfig"
edition = "2021"
homepage = "https://github.com/ehsan2003/ss-uri"
license = "Apache-2.0"
name = "ss-uri"
readme = "README.md"
version = "0.3.0"

[dependencies]
base64 = "0.13.0"
percent-encoding = "2.1.0"
url = "2.2.2"
